# NC2000

./: CC800IOName.h  CMakeCache.txt  CMakeLists.txt  Makefile  NekoDriverIO.cpp  NekoDriverIO.h  README.md  build_win.sh  bus.cpp  bus.h  comm.cpp  comm.h  console.cpp  console.h  cpu.cpp  cpu.h  cpu_emux.cpp  disassembler.cpp  disassembler.h  dsp.cpp  dsp.h  dsp_test.cpp  io.cpp  io.h  main.cpp  mem.cpp  mem.h  nand.cpp  nand.h  nc1020.cpp  nc1020.h  nc2000.cpp  nc2000.h  nor.cpp  nor.h  ram.cpp  ram.h  rom.cpp  rom.h  sound.cpp  (+6 more)
ansi/: c6502.cpp  c6502.h  ibus6502.h  soccommon.h  w65c02.h  w65c02cpu.cpp  w65c02macro.h  w65c02op.cpp
misc/: convert.sh
test/: test_compressor.cpp
