cmake_minimum_required(VERSION 3.15)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "-O2 -g3 -fsanitize=address -I/opt/homebrew/include")
set(CMAKE_CXX_FLAGS "-O2 -g3 -I/opt/homebrew/include")
include_directories(include /usr/local/include/)
project(a.out LANGUAGES CXX)

add_executable(a.out main.cpp nc1020.cpp disassembler.cpp)
#target_link_libraries(a.out PRIVATE "-Wl,-stack_size -Wl,3f00000")
#target_link_directories(a.out PUBLIC "/opt/homebrew/lib")
#find_package(SDL2 REQUIRED PATH /opt/homebrew/lib)
find_package(SDL2 REQUIRED)
#target_link_libraries(a.out SDL2)
target_link_libraries(a.out ${SDL2_LIBRARIES})
