cmake_minimum_required(VERSION 3.15)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "-O2 -g3 -fsanitize=address -I/opt/homebrew/include")
set(CMAKE_CXX_FLAGS "-O2 -g3 -pthread -DHANDYPSP ")
find_package(SDL2 REQUIRED)
project(a.out LANGUAGES CXX)

include_directories(${SDL2_INCLUDE_DIRS})
#target_link_libraries(a.out PRIVATE "-Wl,-stack_size -Wl,3f00000")
#target_link_directories(a.out PUBLIC "/opt/homebrew/lib")
#find_package(SDL2 REQUIRED PATH /opt/homebrew/lib)
#target_link_libraries(a.out SDL2)
add_executable(a.out main.cpp nc2000.cpp disassembler.cpp cpu.cpp comm.cpp mem.cpp io.cpp rom.cpp nor.cpp nand.cpp ram.cpp dsp.cpp dsp_test.cpp sound.cpp console.cpp udp_server.cpp ansi/w65c02cpu.cpp ansi/w65c02op.cpp NekoDriverIO.cpp)
target_link_libraries(a.out ${SDL2_LIBRARIES})
